--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -28,563 +28,6 @@
 .vis-hidden {
   visibility:hidden;
 }
-/* ---- Login Page Styles ---- */
-.loginBtn a {
-  background-color: #404040;
-  color: #ff8533;
-  display:block;
-  height: 38px;
-  font-size: 16px;
-  font-weight: bold;
-  margin:auto;
-  width: 210px;
-}
-
-.loginBtn a:hover {
-  background-color: #595959;
-  color: #ff8533;
-  display:block;
-  font-size: 16px;
-  font-weight: bold;
-  height: 38px;
-  margin:auto;
-  width: 210px;
-}
-
-.loginImg img{
-  width: 40%;
-  display:block;
-  padding: 50px 0px 15px 0px;
-  margin:auto;
-}
-
-/* ---- About Page Styles ---- */
-.about {
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
-.aboutTitle {
-  font-size: 52px;
-  font-weight: bold;
-  margin-bottom: 25px;
-}
-
-.aboutTitle span {
-  font-size: 30px;
-  margin: 10px 0px 10px 10px;
-  color: #a6a6a6;
-}
-
-.aboutTitle span:hover {
-  font-size: 30px;
-  margin: 10px 0px 10px 10px;
-  color: #ff8533;
-}
-
-.aboutSubTitles {
-  font-size: 28px;
-  font-family: 'Montserrat', serif;
-}
-
-.missionDesc {
-  font-size: 16px;
-  margin-bottom: 50px;
-  padding: 5px 0px 0px 0px;
-  font-family: 'Montserrat', serif;
-}
-
-.whoAreWeDesc {
-  font-size: 16px;
-  padding: 5px 0px 15px 0px;
-  font-family: 'Montserrat', serif;
-}
-
-.aboutPhotoTable {
-  margin-bottom: 50px;
-}
-
-.aboutPhotoTable td {
-  border: none;
-  text-align: center;
-}
-
-.aboutPhotoTable a {
-  color: black;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.aboutPhotoTable a:hover {
-  color: #ff8533;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.aboutPhotoTable img{
-  width: 150px;
-  height: 150px;
-  border-radius: 150px;
-}
-
-.aboutPhotoTable img:hover {
-  width: 150px;
-  height: 150px;
-  border-radius: 150px;
-  -webkit-border-radius: 150px;
-  -moz-border-radius: 150px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-}
-
-.contactTable span{
-  color: black;
-  text-decoration: none;
-  font-size: 22px;
-}
-
-.contactTable span:hover{
-  color: #ff8533;
-  font-size: 22px;
-}
-
-.contactTable td {
-  padding: 5px 10px 10px 0px;
-}
-
-/* ---- Navigation Bar Styles ---- */
-.navbar {
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
-.navbar img {
-  width: 60%;
-  margin-top: -5px;
-}
-
-.navbar ul a {
-  color: #404040;
-  font-weight: bold;
-}
-
-.navbar ul a:hover {
-  color: #ff8533;
-  font-weight: bold;
-}
-
-.navbar-light .navbar-toggle .icon-bar {
-  background-color: black;
-}
-
-/* ---- Home Page Styles ---- */
-.home {
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
-.home a:hover {
-  cursor: pointer;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.homeDesc {
-  font-size:18px;
-  padding: 5px 5px 10px 5px;
-  font-family: 'Montserrat', serif;
-}
-
-.homeRows {
-  font-size: 18px;
-  font-family: 'Montserrat', serif;
-}
-
-.homeRows:hover .removeButton{
-  display:inline;
-}
-
-.homeTitle {
-  font-size: 52px;
-  font-weight: bold;
-}
-
-.homeTitle span {
-  color: #a6a6a6;
-  font-size: 30px;
-  margin: 10px 0px 10px 20px;
-}
-
-.homeTitle span:hover {
-  color: #ff8533;
-  font-size: 30px;
-  margin: 10px 0px 10px 20px;
-}
-
-.removeButton {
-  color: #808080;
-  display: none;
-  float: right;
-}
-
-
-/* ---- Repo Table Styles ---- */
-.tablecss {
-  margin-left: 5px;
-  width: 100% !important;
-}
-
-.tablecss span {
-  margin-right: 10px;
-}
-
-.tablecss a {
-  color: gray;
-}
-
-.tablecss a:hover {
-  color: #ff8533;
-}
-
-
-/* ---- Add Page Styles ---- */
-.add {
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
-.add a:hover {
-  cursor: pointer;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.addDesc {
-  font-size:14px;
-  padding: 5px 0px 10px 0px;
-  width:100%;
-  font-family: 'Montserrat', serif;
-}
-
-.addTitle {
-  font-size: 52px;
-  font-weight: bold;
-}
-
-.addTitle span {
-  color: #a6a6a6;
-  font-size: 30px;
-  margin: 10px 0px 10px 5px;
-}
-
-.addTitle span:hover {
-  color: #ff8533;
-  font-size: 30px;
-  margin: 10px 0px 10px 5px;
-}
-
-.filtertextfield {
-  margin: 10px 0px 15px 0px;
-  width: 100%;
-  font-family: 'montserrat', serif;
-}
-
-.filtertextfield td {
-  padding: 0px 0px 0px 5px;
-  font-size: 24px;
-}
-
-.filtertextfield input[type="text"] {
-  width: 450px;
-  height: 50px;
-}
-
-.pages ul li{
-  display: table-cell;
-  padding-left: 0.2em;
-  padding-right: 0.2em;
-  float: center;
-  text-align: center;
-  vertical-align: middle;
-  height: 1em;
-  width: 1em;
-  border-radius: 5px;
-}
-
-.pages ul .end{
-  float: center;
-  font-family: 'Montserrat', serif;
-  font-size: 1.4em;
-  text-align: center;
-  vertical-align: middle;
-  height: 1em;
-  width: 1em;
-}
-
-.pages ul li:hover{
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  width: 1em;
-  height: 1em;
-  color: #ff8533;
-  font-weight: bold;
-  z-index: 1;
-  cursor: pointer;
-}
-
-.pages ul li:active{
-  transition: all .2s ease;
-  font-weight: normal;
-}
-
-/* ---- Setup Page Styles ---- */
-.setup {
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
-.setupTitle {
-  font-size: 52px;
-  font-weight: bold;
-  padding: 10px 0px 10px 0px;
-}
-
-.setupTitle span {
-  color: #a6a6a6;
-  font-size: 30px;
-  margin: 10px 0px 10px 20px;
-}
-
-.setupTitle span:hover {
-  color: #ff8533;
-  font-size: 30px;
-  margin: 1px 0px 10px 20px;
-}
-
-.setupBody {
-  font-size: 16px;
-  padding: 0px 0px 15px 0px;
-  border-radius: 10px
-}
-
-.setupBody a {
-  color: #ff8533;
-}
-
-.setupBody div {
-  background-color: #e6e6e6;
-  margin: 10px 0px 10px 0px;
-  padding: 10px 10px 10px 10px;
-  border-radius: 5px;
-  font-family: 'Montserrat', serif;
-}
-
-/* ---- Dashboard Page Styles ---- */
-.dashboard {
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
-.dashboardTitle {
-  font-size: 52px;
-  padding: 0px;
-  font-weight: bold;
-  line-height: 50px;
-}
-
-.dashboardTitle span {
-  color: #a6a6a6;
-  font-size: 30px;
-  margin: 10px 0px 10px 20px;
-}
-
-.dashboardTitle span:hover {
-  color: #ff8533;
-  font-size: 30px;
-  margin: 1px 0px 10px 20px;
-}
-
-.dashboardTitle a {
-  color: #ff8533;
-}
-
-.dashboardTitle a:hover {
-  color: #a6a6a6;
-}
-
-.dashboardBranch {
-  margin: 5px 0px 0px 0px;
-  font-size: 18px;
-  font-weight: bold;
-  font-family: 'Montserrat', serif;
-}
-
-.dashboardSetupBtn {
-  margin: 10px 0px 10px 0px;
-  font-family: 'Montserrat', serif;
-}
-
-.lastCommit {
-  background-color: #cad8ed;
-  font-size: 14px;
-  padding: 5px 5px;
-  margin: 10px 0px 10px 0px;
-  font-family: 'Montserrat', serif;
-}
-
-.lastCommit span {
-  /*color: #ff8533;*/
-  font-style: oblique;
-  font-weight: bold;
-}
-
-.users {
-  margin: 25px 0px 25px 0px;
-  font-family: 'Montserrat', serif;
-}
-
-.gitimg {
-  border-radius:50%;
-  height:50px;
-  overflow:hidden;
-  padding: 2px;
-  width:50px;
-}
-
-.dashboardUser {
-  font-family: 'Montserrat', serif;
-  position: relative;
-  margin-bottom: 10px;
-}
-
-.dashboardUser a {
-  text-decoration: none;
-  color: black;
-  font-weight: bold;
-}
-
-.dashboardUser a:hover {
-  text-decoration: none;
-  color: #ff8533;
-  font-weight: bold;
-}
-
-.dashboardUserCommit {
-  padding: 0px 0px 5px 0px;
-}
-
-.dashboardUserInfo {
-  padding: 5px 0px 5px 0px;
-}
-
-.diffs {
-  background-color: #e6e6e6;
-  border-style: solid;
-  border-width: 2px;
-  border-color: #A9A9A9;
-  border-radius: 5px;
-  padding: 2px 5px 2px 5px;
-  margin: 2px 0px 2px 0px;
-}
-
-.upToDate {
-  background-color: #c1f0c1;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #A9A9A9;
-  border-radius: 5px;
-  padding: 5px 5px;
-}
-
-.outOfDate {
-  /*background-color: #ffb3b3;*/
-  border-style: solid;
-  border-width: 1px;
-  border-color: #A9A9A9;
-  border-radius: 5px;
-  padding: 5px 5px;
-}
-
-.notSetUp {
-  background-color: grey;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #A9A9A9;
-  border-radius: 5px;
-  padding: 5px 5px;
-  opacity: 0.5;
-}
-
-.status {
-  font-size: 12px;
-  font-weight: bold;
-}
-
-.alignleft {
-  float: left;
-}
-
-.alignright {
-  float: right;
-  position: relative;
-}
-
-.add-repo {
-  font-size: 15px;
-  color: #0000ff;
-  font-family: Helvetica Neue;
-  padding: 10px 10px;
-  line-height: 10px;
-  float: center;
-}
-
-.addedRepo {
-  color: #ff0000;
-}
-
-.button {
-    display: inline-block;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#fbffff));
-    background: -moz-linear-gradient(center top, #ffffff 0%, #eeeeee 100%);
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.2s;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    text-shadow: 0.5px 0.5px 0px #fdffff;
-    padding: 5px 5px;
-    /*display: block;*/
-
-    border-color: #c9cdd1;
-    border-width: 0.5px;
-    border-style: solid;
-    text-align: center;
-    font-family: Helvetica Neue;
-    font-size: 13px;
-    line-height: 12px;
-    color: #455868;
-}
-
-.button:hover {
-    -webkit-box-shadow: 0px 0px 1px 1px #c9cdd1;
-    -moz-box-shadow: 0px 0px 1px 1px #c9cdd1;
-    box-shadow: 0px 0px 1px 1px #c9cdd1;
-    cursor: pointer;
-}
-
-.button:active {
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e8e9ea), color-stop(100%,#ffffff));
-    background: -moz-linear-gradient(center top, #e8e9ea 0%, #ffffff 100%);
-    -webkit-box-shadow: 0px 0px 2px 1px #c9cdd1;
-    -moz-box-shadow: 0px 0px 2px 1px #c9cdd1;
-    box-shadow: 0px 0px 2px 1px #c9cdd1;
-}
-
-.spinner img {
-  width:15%;
-}
 
 /* ----------- iPhone 5 and 5S ----------- */
 
@@ -2586,17 +2029,12 @@
   }
 
   .lastCommit {
-    background-color: #cad8ed;
+    background-color: #7498D0;
+
     font-size: 14px;
     padding: 5px 5px;
     margin: 10px 0px 10px 0px;
     font-family: 'Montserrat', serif;
-  }
-
-  .lastCommit span {
-    /*color: #ff8533;*/
-    font-style: oblique;
-    font-weight: bold;
   }
 
   .users {
@@ -2638,29 +2076,31 @@
     padding: 5px 0px 5px 0px;
   }
 
+  .modTypeTitle {
+    margin: 10px 0px 0px 5px;
+    font-size: 1.3em;
+  }
+
   .diffs {
-    background-color: #e6e6e6;
-    border-style: solid;
-    border-width: 2px;
-    border-color: #A9A9A9;
-    border-radius: 5px;
-    padding: 2px 5px 2px 5px;
-    margin: 2px 0px 2px 0px;
+
+    padding: 0px 5px 0px 15px;
+    margin: 0px 0px 0px 0px;
   }
 
   .upToDate {
     /*background-color: #c1f0c1;*/
-    background-color: #e6e6e6;
+    background-color: #F1f1f1;
     border-style: solid;
     border-width: 1px;
     border-color: #A9A9A9;
     border-radius: 5px;
-    padding: 5px 5px;
+    padding: 5px 0px 5px 0px;
     box-shadow: 2px 2px 2px #888888;
   }
 
   .upToDate > div span{
-    color: green;
+    color: #7498D0;
+    font-size: 1.3em;
   }
 
   .outOfDate {
@@ -2674,8 +2114,9 @@
     box-shadow: 2px 2px 2px #888888;
   }
 
-  .outOfDate > div span{
-    color: red;
+  .outOfDate > div span {
+    color: #e60000;
+    font-size: 1.3em;
   }
 
   .notSetUp {
@@ -2686,6 +2127,11 @@
     border-radius: 5px;
     padding: 5px 5px;
     opacity: 0.5;
+  }
+
+  .notSetUp > div span {
+    color: #333333;
+    font-size: 1.3em;
   }
 
   .status {
